--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import AboutIsland from "../islands/AboutIsland";
+import { AboutIsland } from "@/features/about";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 <BaseLayout>
