--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -1,5 +1,5 @@
 ---
-import ArticlesIsland from "../../islands/ArticlesIsland";
+import { ArticlesIsland } from "@/features/articles";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 <BaseLayout>
