--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import HomeIsland from "../islands/HomeIsland";
+import { HomeIsland } from "@/features/home";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 <BaseLayout>
