--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -3,5 +3,5 @@ import { ArticlesIsland } from "@/features/articles";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 <BaseLayout>
-  <ArticlesIsland client:visible />
+  <ArticlesIsland client:load />
 </BaseLayout>
